update README with resource optimization details and add Docker support for TravicLink